--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BowlingGameKata)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(BowlingGameKata ext/catch.h tests/BowlingGameTests.cpp)
+add_executable(BowlingGameKata ext/catch.h tests/BowlingGameTests.cpp tests/BowlingGameTestImpl.cpp src/Game.cpp src/Game.h)
